--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,14 @@ org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.5
-yarn_mappings=1.20.5+build.1
-loader_version=0.15.10
+minecraft_version=1.19.4
+yarn_mappings=1.19.4+build.1
+loader_version=0.14.18
 
 # Mod Properties
-mod_version = 1.5.0
+mod_version = 1.2.3
 maven_group = org.uiutils
 archives_base_name = uiutils
 
-#Fabric api
-fabric_version=0.97.5+1.20.5
+# Dependencies
+fabric_version=0.76.0+1.19.4
